--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "url": "http://www.pcsg.de"
   },
   "require": {
-    
+    "quiqqer/quiqqer": "^1.2|*@dev",
+    "league/oauth2-client": "^2.0"
   },
   "autoload": {
     "psr-4": {
