--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     {
       "name": "Patrick Müller",
       "email": "p.mueller@pcsg.de",
-      "homepage": "http://www.pcsg.de",
+      "homepage": "https://www.pcsg.de",
       "role": "Developer"
     }
   ],
