--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -2,7 +2,9 @@ includes:
 	- phpstan-baseline.neon
 
 parameters:
-    level: 8
+    level: 5
     paths:
         - src
+    bootstrapFiles:
+        - tests/phpstan-bootstrap.php
     tipsOfTheDay: false
